sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:31: error: 'while' expected but '}' found.
} 
^